feat(header): changes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   </head>
   <body>
     <!-- Mobile header -->
-    <header class="header-mobile">
+    <header class="header-mobile closed">
       <div class="header-mobile-item">
-        <button class="header-menu-button header-link">
+        <button id="menu-button" class="header-menu-button header-link">
           <svg height="24" class="header-menu-icon" viewBox="0 0 16 16" version="1.1" width="24" aria-hidden="true">
             <path
               fill-rule="evenodd"
@@ -19,6 +19,14 @@
             ></path>
           </svg>
         </button>
+      </div>
+      <div class="header-mobile-item header-mobile-menu">
+        <div class="mobile-search">
+
+        </div>
+        <nav class="menu">
+          
+        </nav>
       </div>
       <div class="header-mobile-item header-mobile-logo">
         <a href="https://github.com/" class="header-link">
