feat: add graphql query

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <div class="loading">
+      Loading...
+    </div>
     <!-- Mobile header -->
     <header class="header-mobile closed">
       <div class="header-mobile-item">
