--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         </details>
       </div>
       <div class="header-mobile-item header-dropdown header-mobile-last">
-        <details class="dropdown-details" open>
+        <details class="dropdown-details">
           <summary class="header-link">
             <img
               class="mobile-menu-avi"
