feat(search): add search fields

--- a/index.html
+++ b/index.html
@@ -24,10 +24,17 @@
         </button>
       </div>
       <div class="header-mobile-item header-mobile-menu">
-        <div class="mobile-search"></div>
+        <div class="mobile-search">
+          <div class="search-cont">
+            <label class="search-label">
+              <input type="text" class="search-input" placeholder="Search or jump to...">
+              <img class="search-image" src="https://github.githubassets.com/images/search-key-slash.svg" alt="/ icon">
+            </label>
+          </div>
+        </div>
         <nav class="mobile-menu">
           <a href="https://github.com/dashboard" class="mobile-menu-link header-link">Dashboard</a>
-          <a href="https://github.com/pulls" class="mobile-menu-link header-link">Pull Requests</a>
+          <a href="https://github.com/pulls" class="mobile-menu-link header-link">Pull requests</a>
           <a href="https://github.com/issues" class="mobile-menu-link header-link">Issues</a>
           <a href="https://github.com/marketplace" class="mobile-menu-link header-link">Marketplace</a>
           <a href="https://github.com/explore" class="mobile-menu-link header-link">Explore</a>
@@ -42,7 +49,7 @@
             />
             cirqlar
           </a>
-          <a href="https://github.com" class="mobile-menu-link header-link">
+          <a href="https://github.com" class="mobile-menu-link header-link mobile-sign-out-link">
             <svg class="mobile-sign-out" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
               <path
                 fill-rule="evenodd"
@@ -99,7 +106,14 @@
         </a>
       </div>
       <div class="header-mobile-item desk-nav">
-        <div class="desk-search"></div>
+        <div class="desk-search">
+          <div class="search-cont">
+            <label class="search-label">
+              <input type="text" class="search-input" placeholder="Search or jump to...">
+              <img class="search-image" src="https://github.githubassets.com/images/search-key-slash.svg" alt="/ icon">
+            </label>
+          </div>
+        </div>
         <nav class="desk-menu">
           <a href="https://github.com/pulls" class="menu-link header-link">Pulls</a>
           <a href="https://github.com/issues" class="menu-link header-link">Issues</a>
