--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <div class="loading">
-      Loading...
-    </div>
+    <div class="loading">Loading...</div>
     <!-- Mobile header -->
     <header class="header-mobile closed">
       <div class="header-mobile-item">
@@ -27,8 +25,12 @@
         <div class="mobile-search">
           <div class="search-cont">
             <label class="search-label">
-              <input type="text" class="search-input" placeholder="Search or jump to...">
-              <img class="search-image" src="https://github.githubassets.com/images/search-key-slash.svg" alt="/ icon">
+              <input type="text" class="search-input" placeholder="Search or jump to..." />
+              <img
+                class="search-image"
+                src="https://github.githubassets.com/images/search-key-slash.svg"
+                alt="/ icon"
+              />
             </label>
           </div>
         </div>
@@ -39,15 +41,9 @@
           <a href="https://github.com/marketplace" class="mobile-menu-link header-link">Marketplace</a>
           <a href="https://github.com/explore" class="mobile-menu-link header-link">Explore</a>
           <a href="https://github.com/settings/profile" class="mobile-menu-link header-link">Settings</a>
-          <a href="https://github.com/cirqlar" class="mobile-menu-link header-link">
-            <img
-              class="mobile-menu-avi"
-              src="https://avatars3.githubusercontent.com/u/14963262?s=40&v=4"
-              alt="profile-picture"
-              width="20"
-              height="20"
-            />
-            cirqlar
+          <a href="#" class="mobile-menu-link header-link" data-set="href=url">
+            <img class="mobile-menu-avi" data-set="src=avatarUrl" src="" alt="profile-picture" width="20" height="20" />
+            <span data-set-content="login"></span>
           </a>
           <a href="https://github.com" class="mobile-menu-link header-link mobile-sign-out-link">
             <svg class="mobile-sign-out" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
@@ -109,8 +105,12 @@
         <div class="desk-search">
           <div class="search-cont">
             <label class="search-label">
-              <input type="text" class="search-input" placeholder="Search or jump to...">
-              <img class="search-image" src="https://github.githubassets.com/images/search-key-slash.svg" alt="/ icon">
+              <input type="text" class="search-input" placeholder="Search or jump to..." />
+              <img
+                class="search-image"
+                src="https://github.githubassets.com/images/search-key-slash.svg"
+                alt="/ icon"
+              />
             </label>
           </div>
         </div>
@@ -145,14 +145,7 @@
       <div class="header-mobile-item header-dropdown">
         <details class="dropdown-details">
           <summary class="header-link">
-            <svg
-              class="details-plus"
-              viewBox="0 0 16 16"
-              version="1.1"
-              width="16"
-              height="16"
-              aria-hidden="true"
-            >
+            <svg class="details-plus" viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
               <path
                 fill-rule="evenodd"
                 d="M8 2a.75.75 0 01.75.75v4.5h4.5a.75.75 0 010 1.5h-4.5v4.5a.75.75 0 01-1.5 0v-4.5h-4.5a.75.75 0 010-1.5h4.5v-4.5A.75.75 0 018 2z"
@@ -173,29 +166,37 @@
       <div class="header-mobile-item header-dropdown header-mobile-last">
         <details class="dropdown-details">
           <summary class="header-link">
-            <img
-              class="mobile-menu-avi"
-              src="https://avatars3.githubusercontent.com/u/14963262?s=40&v=4"
-              alt="profile-picture"
-              width="20"
-              height="20"
-            />
+            <img class="mobile-menu-avi" data-set="src=avatarUrl" src="" alt="profile-picture" width="20" height="20" />
             <span class="downward-caret"></span>
           </summary>
-          
+
           <details-menu class="details-menu">
             <div class="current-user">
-              <a href="https://github.com/cirqlar" class="user-link">
-                Signed in as <strong>cirqlar</strong>
+              <a href="#" data-set="href=url" class="user-link">
+                Signed in as <strong data-set-content="login"></strong>
               </a>
             </div>
             <div class="details-menu-divider"></div>
+            <div class="status">
+              <div class="status-cont">
+                <div class="status-inside">
+                  <div data-set-content="status.emojiHTML" class="status-emoji"></div>
+                  <div
+                    data-set-content="status.message"
+                    data-content-fallback="Edit Status"
+                    class="status-message"
+                  ></div>
+                </div>
+              </div>
+            </div>
             <div class="details-menu-divider"></div>
-            <a href="https://github.com/cirqlar" class="details-item">Your profile</a>
-            <a href="https://github.com/cirqlar?tab=repositories" class="details-item">Your repositories</a>
+            <a href="#" data-set="href=url" class="details-item">Your profile</a>
+            <a href="#" data-set="href=url" data-set-pattern="%%?tab=repositories" class="details-item"
+              >Your repositories</a
+            >
             <a href="https://github.com/settings/organizations" class="details-item">Your organizations</a>
-            <a href="https://github.com/cirqlar?tab=projects" class="details-item">Your projects</a>
-            <a href="https://github.com/cirqlar?tab=stars" class="details-item">Your stars</a>
+            <a href="#" data-set="href=url" data-set-pattern="%%?tab=projects" class="details-item">Your projects</a>
+            <a href="#" data-set="href=url" data-set-pattern="%%?tab=stars" class="details-item">Your stars</a>
             <a href="https://gist.github.com/mine" class="details-item">Your gists</a>
             <div class="details-menu-divider"></div>
             <a href="https://github.com" class="details-item">Feature preview</a>
