feat: add footer

--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
           <a href="https://github.com/issues" class="mobile-menu-link header-link">Issues</a>
           <a href="https://github.com/marketplace" class="mobile-menu-link header-link">Marketplace</a>
           <a href="https://github.com/explore" class="mobile-menu-link header-link">Explore</a>
+          <a href="https://github.com/codespaces" class="mobile-menu-link header-link">Codespaces</a>
+          <a href="https://github.com/sponsors/accounts" class="mobile-menu-link header-link">Sponsors</a>
           <a href="https://github.com/settings/profile" class="mobile-menu-link header-link">Settings</a>
           <a href="#" class="mobile-menu-link header-link" data-set="href=url">
             <img class="mobile-menu-avi" data-set="src=avatarUrl" src="" alt="profile-picture" width="20" height="20" />
@@ -199,14 +201,59 @@
             <a href="#" data-set="href=url" data-set-pattern="%%?tab=stars" class="details-item">Your stars</a>
             <a href="https://gist.github.com/mine" class="details-item">Your gists</a>
             <div class="details-menu-divider"></div>
+            <a href="https://github.com/account/choose?action=upgrade" class="details-item">Upgrade</a>
             <a href="https://github.com" class="details-item">Feature preview</a>
             <a href="https://docs.github.com/" class="details-item">Help</a>
             <a href="https://github.com/settings/profile" class="details-item">Settings</a>
+            <div class="details-menu-divider"></div>
             <a href="https://github.com" class="details-item">Sign out</a>
           </details-menu>
         </details>
       </div>
     </header>
+
+    <footer class="footer">
+      <div class="footer-wrapper">
+        <ul class="footer-list">
+          <li class="footer-item">© 2021 GitHub, Inc.</li>
+          <li class="footer-item footer-link">
+            <a href="https://docs.github.com/en/github/site-policy/github-terms-of-service">Terms</a>
+          </li>
+          <li class="footer-item footer-link">
+            <a href="https://docs.github.com/en/github/site-policy/github-privacy-statement">Privacy</a>
+          </li>
+          <li class="footer-item footer-link">
+            <a href="https://github.com/security">Security</a>
+          </li>
+          <li class="footer-item footer-link">
+            <a href="https://www.githubstatus.com/">Status</a>
+          </li>
+          <li class="footer-item footer-link">
+            <a href="https://docs.github.com/">Docs</a>
+          </li>
+        </ul>
+        <ul class="footer-list">
+          <li class="footer-item footer-link">
+            <a href="https://support.github.com/">Contact Github</a>
+          </li>
+          <li class="footer-item footer-link">
+            <a href="https://github.com/pricing">Pricing</a>
+          </li>
+          <li class="footer-item footer-link">
+            <a href="https://docs.github.com/">API</a>
+          </li>
+          <li class="footer-item footer-link">
+            <a href="https://services.github.com/">Training</a>
+          </li>
+          <li class="footer-item footer-link">
+            <a href="https://github.blog/">Blog</a>
+          </li>
+          <li class="footer-item footer-link">
+            <a href="https://github.com/about">About</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
 
     <script src="./scripts.js"></script>
   </body>
