--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
           <input type="submit" id="username-submit" value="Search" class="btn username-btn btn-block" />
         </form>
-        <div id="errors">
+        <div id="errors" class="errors">
           
         </div>
       </div>
